@@ -1,3 +1,6 @@
+Changed air to be white instead of black
+Changed normal line to be black instead of yellow
+Improved medium colors to support air=white instead of air=black
 Start the intensity meter in the bottom right
 Start the protractor in the lower-left corner
 Moved the control panel layer in front of the horizontal line
